gcc/testsuite/algol68/compile/error-supper-1.a68
# { dg-options {-fstropping=upper} }  #

begin ~ end # { dg-error "" }  #
